testdata/baselines/reference/submodule/conformance/tsxStatelessFunctionComponentOverload6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
file.tsx(29,55): error TS2503: Cannot find namespace 'JSX'.
file.tsx(30,51): error TS2503: Cannot find namespace 'JSX'.
file.tsx(31,55): error TS2503: Cannot find namespace 'JSX'.
file.tsx(32,75): error TS2503: Cannot find namespace 'JSX'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (5 errors) ====
    import React = require('react')
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    export interface ClickableProps {
        children?: string;
        className?: string;
    }
    
    export interface ButtonProps extends ClickableProps {
        onClick: React.MouseEventHandler<any>;
    }
    
    export interface LinkProps extends ClickableProps {
        to: string;
    }
    
    export interface HyphenProps extends ClickableProps {
        "data-format": string;
    }
    
    let obj = {
        children: "hi",
        to: "boo"
    }
    let obj1: any;
    let obj2 = {
        onClick: () => {}
    }
    
    export function MainButton(buttonProps: ButtonProps): JSX.Element;
                                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    export function MainButton(linkProps: LinkProps): JSX.Element;
                                                      ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    export function MainButton(hyphenProps: HyphenProps): JSX.Element;
                                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    export function MainButton(props: ButtonProps | LinkProps | HyphenProps): JSX.Element {
                                                                              ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
        const linkProps = props as LinkProps;
        if(linkProps.to) {
            return this._buildMainLink(props);
        }
    
        return this._buildMainButton(props);
    }
    
    // OK
    const b0 = <MainButton to='/some/path'>GO</MainButton>;
    const b1 = <MainButton onClick={(e) => {}}>Hello world</MainButton>;
    const b2 = <MainButton {...obj} />;
    const b3 = <MainButton {...{to: 10000}} {...obj} />;
    const b4 = <MainButton {...obj1} />;  // any; just pick the first overload
    const b5 = <MainButton {...obj1} to="/to/somewhere" />;  // should pick the second overload
    const b6 = <MainButton {...obj2} />;
    const b7 = <MainButton {...{onClick: () => { console.log("hi") }}} />;
    const b8 = <MainButton {...{onClick() {}}} />;  // OK; method declaration get retained (See GitHub #13365)
    const b9 = <MainButton to='/some/path' extra-prop>GO</MainButton>;
    const b10 = <MainButton to='/some/path' children="hi" ></MainButton>;
    const b11 = <MainButton onClick={(e) => {}} className="hello" data-format>Hello world</MainButton>;
    const b12 = <MainButton data-format="Hello world" />
    
    
    